--- a/index.html
+++ b/index.html
@@ -1,99 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-        <div class="time-block row" id="8am">
-        <div class="hour col-md-1">8:00 AM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="9am">
-        <div class="hour col-md-1">9:00 AM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="10am">
-        <div class="hour col-md-1">10:00 AM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="11am">
-        <div class="hour col-md-1">11:00 AM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="12pm">
-        <div class="hour col-md-1">12:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="1pm">
-        <div class="hour col-md-1">1:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="2pm">
-        <div class="hour col-md-1">2:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="3pm">
-        <div class="hour col-md-1">3:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="4pm">
-        <div class="hour col-md-1">4:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="5pm">
-        <div class="hour col-md-1">5:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="6pm">
-        <div class="hour col-md-1">6:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="7pm">
-        <div class="hour col-md-1">7:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="8pm">
-        <div class="hour col-md-1">8:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="9pm">
-        <div class="hour col-md-1">9:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-        <div class="time-block row" id="10pm">
-        <div class="hour col-md-1">10:00 PM</div>
-        <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <div class="time-block row" id="8">
+      <div class="hour col-md-1">8:00 AM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
+    <div class="time-block row" id="9">
+      <div class="hour col-md-1">9:00 AM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="10">
+      <div class="hour col-md-1">10:00 AM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="11am">
+      <div class="hour col-md-1">11:00 AM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="12pm">
+      <div class="hour col-md-1">12:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="1pm">
+      <div class="hour col-md-1">1:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="2pm">
+      <div class="hour col-md-1">2:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="3pm">
+      <div class="hour col-md-1">3:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="4pm">
+      <div class="hour col-md-1">4:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="5pm">
+      <div class="hour col-md-1">5:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="6pm">
+      <div class="hour col-md-1">6:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="7pm">
+      <div class="hour col-md-1">7:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="8pm">
+      <div class="hour col-md-1">8:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="9pm">
+      <div class="hour col-md-1">9:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div class="time-block row" id="10pm">
+      <div class="hour col-md-1">10:00 PM</div>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
+        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
-
