--- a/index.html
+++ b/index.html
@@ -27,73 +27,76 @@
     </div>
     <div class="time-block row" id="9">
       <div class="hour col-md-1">9:00 AM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
     <div class="time-block row" id="10">
       <div class="hour col-md-1">10:00 AM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="11am">
+    <div class="time-block row" id="11">
       <div class="hour col-md-1">11:00 AM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="12pm">
+    <div class="time-block row" id="12">
       <div class="hour col-md-1">12:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="1pm">
+    <div class="time-block row" id="1">
       <div class="hour col-md-1">1:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="2pm">
+    <div class="time-block row" id="2">
       <div class="hour col-md-1">2:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="3pm">
+    <div class="time-block row" id="3">
       <div class="hour col-md-1">3:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="4pm">
+    <div class="time-block row" id="4">
       <div class="hour col-md-1">4:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="5pm">
+    <div class="time-block row" id="5">
       <div class="hour col-md-1">5:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="6pm">
+    <div class="time-block row" id="6">
       <div class="hour col-md-1">6:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
-    <div class="time-block row" id="7pm">
+    <div class="time-block row" id="7">
       <div class="hour col-md-1">7:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
     <div class="time-block row" id="8pm">
       <div class="hour col-md-1">8:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
     <div class="time-block row" id="9pm">
       <div class="hour col-md-1">9:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
     <div class="time-block row" id="10pm">
       <div class="hour col-md-1">10:00 PM</div>
-      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea><button
-        class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      <textarea name="" id="" cols="30" rows="1" class="description col-md-10"></textarea>
+      <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+    <div id="clearBtnContainer">
+      <button type="button" id="clear-btn" class="btn btn-outline-danger">Clear</button>
     </div>
   </div>
 
